fix vertical alignment of checkboxes

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -157,3 +157,10 @@ ARTICLE TABLE {
 	-moz-box-shadow: 2px 2px 6px rgba(0,0,0,0.6); /* mozilla haven't committed yet */
 }
 
+/* Fix vertical alignment of checkboxes */
+input[type=checkbox] {
+	vertical-align: middle;
+	position: relative;
+	bottom: 1px;
+	margin-top: 4px;
+}
